--- a/index.html
+++ b/index.html
@@ -34,17 +34,23 @@
             <p>En sevdiğin şarkıları dinle!</p>
         </div>
 
-        <div class="category-card video">
+        <a href="videolar.html" class="category-card video" style="text-decoration: none; color: inherit;">
             <div class="icon">🎬</div>
             <h2>Video</h2>
             <p>Komik ve eğlenceli videolar izle!</p>
-        </div>
+        </a>
 
         <a href="oyunlar.html" class="category-card game" style="text-decoration: none; color: inherit;"
             onclick="console.log('Opening Games Page');">
             <div class="icon">🎮</div>
             <h2>Oyun</h2>
             <p>Harika oyunlar oyna!</p>
+        </a>
+
+        <a href="resimler.html" class="category-card pictures" style="text-decoration: none; color: inherit;">
+            <div class="icon">🖼️</div>
+            <h2>Resimler</h2>
+            <p>Anılarına göz at!</p>
         </a>
     </main>
 
