--- a/resimler.html
+++ b/resimler.html
@@ -52,6 +52,7 @@
             <div class="hidden-content-wrapper hidden-content">
                 <button id="reLockBtn" class="relock-btn">Tekrar Kilitle 🔒</button>
                 <div class="gallery-grid">
+                    <div class="gallery-item"><img src="resimlerim/babaannem.png" alt="Özel Resim Babaannem"></div>
                     <div class="gallery-item"><img src="resimlerim/caco halam.png" alt="Özel Resim 1"></div>
                     <div class="gallery-item"><img src="resimlerim/canım ablam.png" alt="Özel Resim 2"></div>
                     <div class="gallery-item"><img src="resimlerim/ela.png" alt="Özel Resim 3"></div>
@@ -88,6 +89,12 @@
     <footer>
         <p>Senin için hazırlandı! 🎈</p>
     </footer>
+
+    <!-- Lightbox for Image Enlargement -->
+    <div id="lightbox" class="lightbox">
+        <button id="lightboxClose" class="lightbox-close">Küçült ➖</button>
+        <img id="lightboxImg" src="" alt="Büyütülmüş Resim">
+    </div>
 
     <script src="resimler.js"></script>
 </body>
