dört işlem oyunu eklendi

--- a/oyunlar.html
+++ b/oyunlar.html
@@ -115,6 +115,19 @@
                 </div>
             </a>
 
+            <a href="dort-islem-oyunu/index.html" class="game-card math-card"
+                onclick="console.log('Opening Math Game');">
+                <div class="game-icon-container">
+                    <div class="math-symbols">➕➖</div>
+                    <div class="inner-icon purple-text">➗✖️</div>
+                </div>
+                <div class="game-info">
+                    <h2>Dört İşlem</h2>
+                    <div class="badge purple-badge">Matematik Dehası</div>
+                    <p>Çizim yaparak soruları çöz!</p>
+                </div>
+            </a>
+
             <a href="index.html" class="back-button">⬅️ Ana Sayfaya Dön</a>
     </main>
 
