--- a/oyunlar.html
+++ b/oyunlar.html
@@ -128,6 +128,19 @@
                 </div>
             </a>
 
+            <!-- Family Game Card -->
+            <a href="aileoyunu/index.html" class="game-card family-card" onclick="console.log('Opening Family Game');">
+                <div class="game-icon-container">
+                    <div class="family-icon">👨‍👩‍👧‍👦</div>
+                    <div class="inner-icon green-text">FAMILY</div>
+                </div>
+                <div class="game-info">
+                    <h2>Aile Oyunu</h2>
+                    <div class="badge green-badge">İngilizce Öğren</div>
+                    <p>English Family Card Game</p>
+                </div>
+            </a>
+
             <a href="index.html" class="back-button">⬅️ Ana Sayfaya Dön</a>
     </main>
 
