--- a/oyunlar.html
+++ b/oyunlar.html
@@ -17,7 +17,7 @@
         }
 
         .game-card {
-            background: rgba(255, 255, 255, 0.9);
+            background: rgba(255, 186, 249, 0.9);
             border-radius: 20px;
             padding: 2rem;
             text-align: center;
@@ -30,7 +30,7 @@
 
         .game-card:hover {
             transform: translateY(-10px);
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 10px 20px rgb(255, 181, 237);
         }
 
         .game-icon {
@@ -43,7 +43,7 @@
             margin-top: 2rem;
             padding: 10px 20px;
             background-color: #ff6b6b;
-            color: white;
+            color: #ffb7f3;
             text-decoration: none;
             border-radius: 50px;
             font-weight: bold;
@@ -132,7 +132,7 @@
             <a href="aileoyunu/index.html" class="game-card family-card" onclick="console.log('Opening Family Game');">
                 <div class="game-icon-container">
                     <div class="family-icon">👨‍👩‍👧‍👦</div>
-                    <div class="inner-icon green-text">FAMILY</div>
+                    <div class="inner-icon" style="color: black;">FAMILY</div>
                 </div>
                 <div class="game-info">
                     <h2>Aile Oyunu</h2>
