--- a/oyunlar.html
+++ b/oyunlar.html
@@ -17,7 +17,7 @@
         }
 
         .game-card {
-            background: rgba(255, 186, 249, 0.9);
+            background: rgba(255, 255, 255, 0.9);
             border-radius: 20px;
             padding: 2rem;
             text-align: center;
@@ -30,7 +30,7 @@
 
         .game-card:hover {
             transform: translateY(-10px);
-            box-shadow: 0 10px 20px rgb(255, 181, 237);
+            box-shadow: 0 10px 20px rgb(255, 255, 255);
         }
 
         .game-icon {
@@ -43,7 +43,7 @@
             margin-top: 2rem;
             padding: 10px 20px;
             background-color: #ff6b6b;
-            color: #ffb7f3;
+            color: #ffffff;
             text-decoration: none;
             border-radius: 50px;
             font-weight: bold;
