--- a/oyunlar.html
+++ b/oyunlar.html
@@ -141,6 +141,20 @@
                 </div>
             </a>
 
+            <!-- Attribute Game Card -->
+            <a href="attribute-game/index.html" class="game-card attribute-card"
+                onclick="console.log('Opening Attribute Game');">
+                <div class="game-icon-container">
+                    <div class="family-icon">🧑👧</div>
+                    <div class="inner-icon" style="color: black;">TEAM</div>
+                </div>
+                <div class="game-info">
+                    <h2>Attribute Game</h2>
+                    <div class="badge pink-badge">Boys vs Girls</div>
+                    <p>English Attribute Game</p>
+                </div>
+            </a>
+
             <a href="index.html" class="back-button">⬅️ Ana Sayfaya Dön</a>
     </main>
 
